--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,1 +1,32 @@
-<p>footer works!</p>
+<div class="footer-container">
+    <div class="footer">
+        <div class="logo-and-bi-holder">
+            <div class="logo">
+                <img src="assets/cite-logo.jpg" alt="">
+            </div>
+            <div class="bi-holder">
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
+            </div>
+        </div>
+        <div class="text-holder">
+            <div class="info-text">
+                The content of the site reflects a general description of the company as well as its activities. 
+                There can be no guarantee that such information will be accurate in the future. 
+                No one should use this information without prior permission of INCITES. 
+            </div>
+            <div class="contact-info">
+                Contact information: <br>
+                130, Route d’ Arlon <br>
+                L-8008, Strassen - Luxembourg <br>
+                Tel: (+352) 27 44 96 68 <br>
+                Tel: (+352) 20 60 12 66
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="text">
+            © Copyright 2022 - InCites - All right reserved - Privacy policy
+        </div>
+    </div>
+</div>
