--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="headerContainer">
-    <div class="primary-header">
+    <div class="primary-header" [style.display]="scrolledDown ? 'none' : 'flex'">
         <div class="logos">
             <i class="bi bi-linkedin"></i>
             <i class="bi bi-twitter"></i>
