--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="componentContainer">
-    <app-header></app-header>
-
+<div #container class="componentContainer">
+    <app-header [scrolledDown]="scrolledDown"></app-header>
+    <app-europe-readiness></app-europe-readiness>
 
 
 
