--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -2,11 +2,18 @@
     <div class="footer">
         <div class="logo-and-bi-holder">
             <div class="logo">
-                <img src="assets/cite-logo.jpg" alt="">
+                <img src="assets/cite-logo1.jpg" alt="">
             </div>
             <div class="bi-holder">
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-twitter"></i>
+                <a href="https://www.facebook.com/citesagr" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-facebook"></i>
+                  </a>
+                <a href="https://www.linkedin.com/company/cite-sa/posts/?feedView=all" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://x.com/cite_sa" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-twitter"></i> 
+                </a>
             </div>
         </div>
         <div class="text-holder">
